--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,9 @@ footer {
     h1 {
         text-align: center;
     }
+    h1 a {
+        font-size: 6rem;
+    }
     nav {
         text-align: center;
     }
@@ -268,5 +271,12 @@ footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+        background-color: rgb(0, 4, 17);
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+    }
+    h4 {
+        text-align: center;
     }
 }
